#####                              CHANGELOG                               #####
#####                                                                      #####
################################################################################

0.17.* UPDATES
--------------------------------------------------------------------------------
2: Added a server-small config to downscale the server requirements for smaller projects
1: Define a TMPDIR for the create vertical ref rules, as it seems to crash for large datasets when the system default tmp folder is small

Previous updates
--------------------------------------------------------------------------------
0.16.1: * Small path adjustments
0.16  : * New release with previous changes
0.15.9: * Added the callvariants rule
0.15.8: * Added the readalignment rule
0.15.7: * Exception catching added for QC-Report block "qualityValueDistribution {Concatenated,Trimmed} data"
0.15.6: * Bugfixes and restructing of the script-files
REVERSED!!! 0.15.5: * config and server config files are now taken from bash call and do not need to be specified again in the config file itself 
0.15.4: * Changed final Report also to modules that can be reused from other pipelines
0.15.3: * Dedicated QC report added for the QC rule
0.15.2: * Added the barcodes file as a dependency for rules that need it, otherwise the pipeline ran into a missing file error.
0.15.1: * Changed the r-gbs standard container to version 4.2.1-0.2
0.14  : * Major change, switching from unhandy rawsamples, samples, barcodes.txt to single, universal sample sheet file
0.12  : * Stable release after bugfixes and added features
0.11.5: * Mock reference contig alignemtns against reference genome coverage plot added
0.11.4: * StringMerge stats removed from the FinalReport and Cleaning scripts adjusted
0.11.3: * Bugfix in CountFileList.txt - it assumed same order as in barcodesID.txt
0.11.2: * Quality value distribution added to the final report.
0.11.1: * Minor bugfixes