@@ -83,6 +83,40 @@ rule R_QCReport:
              snakemake <- TRUE;\
              source('{input.script}')" &> {log}
     """
+    
+rule R_VariantCallingReport:
+    """
+    Create the final report (R).
+    """
+    input:
+        script=config["variant-script"],
+        mockvcf="%s/VCF/FinalSetVariants_finalMock.vcf" % (config["project-folder"]),
+        refvcf="%s/VCF/FinalSetVariants_referenceGenome.vcf" % (config["project-folder"]),
+    output:
+        "%s/VariantCalling-Report.html" % (config["project-folder"])
+    log:
+        "%s/logs/R/VariantCalling-Report.log" % (config["project-folder"])
+    benchmark:
+        "%s/benchmark/R_VariantCallingReport.tsv" % (config["project-folder"])
+    singularity:
+        config["singularity"]["r-gbs"]
+    params:
+       projFolder=config["project-folder"],
+       pipeFolder=config["pipeline-folder"],
+       pipeConfig=config["pipeline-config"],
+       refGenome=config["genome"]
+    shell:"""
+       echo "Creating the VariantCalling-Report"
+       echo "###################################################################"
+       echo ""
+       
+       R -e "projFolder <- '{params.projFolder}'; \
+             pipelineFolder <- '{params.pipeFolder}'; \
+             refGenome.file <- '{params.refGenome}'; \
+             pipelineConfig.file <- '{params.pipeConfig}'; \
+             snakemake <- TRUE;\
+             source('{input.script}')" &> {log}
+    """
 
 rule R_MockEval:
     """
