@@ -1,138 +1,327 @@
+
 # Variants
-Import the Result vcf
+
+```{r}
+getBasicStats <- function(x){
+  output <- list()
+  out <- c()
+  out[1] <- dim(x$map)[1]
+  names(out)[1] <- "Total number of variants"
+
+  out[2] <- sum(sapply(apply(x$genotypes,2,table),length)==1)
+  names(out)[2] <- "Monomorphic sites"
+
+  out_html <- knitr::kable(out, col.names = NULL, "html")
+  
+  output[[1]] <- out_html
+  
+  output[[2]] <-  knitr::kable(table(x$map[,c(5,6)]), "html")
+  
+  output
+  
+}
+
+getInfoSummary <- function(x){
+  y <- x$info
+  
+  out <- rbind(summary(y[, "AC"]),
+               summary(y[, "AF"]),
+               summary(y[, "DP"]),
+               summary(y[, "AV"]),
+               summary(y[, "NS"]))
+  
+  rownames(out) <- c("Allele count",
+                     "Allele frequency",
+                     "Total depth",
+                     "Average depth",
+                     "Samples with data")
+ 
+  colnames(out) <- c("Minimum",
+                     "1st Quartile",
+                     "Median",
+                     "Mean",
+                     "3rd Quartile",
+                     "Maximum")
+   
+  out_html <- knitr::kable(out, "html")
+    
+  out_html
+}
+
+if(refAvail){
+  refInfo.file <- paste0(refGenome.file,".fai")
+  refInfo <- read.table(refInfo.file)
+}
+```
+
+Import the Result vcfs
 
 ```{r import vcf, echo=FALSE, message=FALSE, warning=FALSE}
-vcf <- importVCF(file.path(projFolder, "MPILEUP", "mpileup_finalMock", "GSC.vcf"))
-vcfUnfiltered <- importVCF(file.path(projFolder, "MPILEUP", "mpileup_finalMock", "GSC.unfiltered.vcf"))
+vcf <- importVCF(file.path(projFolder, "MPILEUP", "mpileup_finalMock", "GSC.vcf"), getInfo = TRUE)
+vcfUnfiltered <- importVCF(file.path(projFolder, "MPILEUP", "mpileup_finalMock", "GSC.unfiltered.vcf"), getInfo = TRUE)
+
+vcfGSC <- importVCF(file.path(projFolder, "FASTQ", "TRIMMED", "GSC.vcf"), getInfo = TRUE)
+vcfGSCUnfiltered <- importVCF(file.path(projFolder, "FASTQ", "TRIMMED", "GSC.unfiltered.vcf"), getInfo = TRUE)
+
 if(refAvail){
-  vcfRef <- importVCF(file.path(projFolder, "VCF", "FinalSetVariants_referenceGenome.vcf"))
+  vcfRef <- importVCF(file.path(projFolder, "MPILEUP", "mpileup_reference", "GSC.vcf"), getInfo = TRUE)
+  vcfRefUnfiltered <- importVCF(file.path(projFolder, "MPILEUP", "mpileup_reference", "GSC.unfiltered.vcf"), getInfo = TRUE)
 }
 ```
 
-```{r get alleleCounts}
-gtInfo <- apply(vcfUnfiltered$genotypesInfo,2,strsplit,",")
-refAll <- matrix(-1, nrow=length(gtInfo), ncol=length(gtInfo[[1]]))
-altAll <- matrix(-1, nrow=length(gtInfo), ncol=length(gtInfo[[1]]))
+## Final mock
 
-for(i in 1:nrow(refAll)){
-  tmp <- sapply(gtInfo[[i]],"[",1)
-  tmp[tmp=="."] <- NA
-  refAll[i,] <- as.numeric(tmp)
-  
-  tmp <- sapply(gtInfo[[i]],"[",2)
-  tmp[tmp=="."] <- NA
-  altAll[i,] <- as.numeric(tmp)
-}
+### Basic stats
 
-DP <- refAll+altAll
-```
-
-## Mock reference
-We give some basic stats on the vcf file
+Basic stats and combinations for the called variants for filtered calls.
 
 ```{r}
-  out <- c()
-  out[1] <- dim(vcf$map)[1]
-  noVariants <- dim(vcf$map)[1]
-  names(out)[1] <- "Total number of variants"
-  out[2] <- sum(sapply(apply(vcf$genotypes,2,table),length)==1)
-  names(out)[2] <- "Monomorphic sites"
-  out_html <- knitr::kable(out, col.names = NULL, "html")
-  kable_styling(out_html, "striped", position = "left")
+out <- getBasicStats(vcf)
+  kable_styling(out[[1]], "striped", position = "left")  
+  
+  kable_styling(out[[2]], "striped", position = "left")  
 ```
 
-### SNP position vs snp index
+Basic stats and combinations for the called variants for unfiltered calls.
+
+```{r}
+out <- getBasicStats(vcfUnfiltered)
+  kable_styling(out[[1]], "striped", position = "left")  
+  
+  kable_styling(out[[2]], "striped", position = "left")  
+```
+
+### Info Stats
+
+Genotype stats for called variants for filtered calls.
+
+```{r}
+kable_styling(getInfoSummary(vcf), "striped", position = "left")  
+```
+
+Genotype stats for called variants for unfiltered calls.
+
+```{r}
+kable_styling(getInfoSummary(vcfUnfiltered), "striped", position = "left")  
+```
+
+
+### Visuals
+
+#### SNP position vs snp index
 Plot the snp position
 
-```{r}
-plot(as.vector(as.matrix(vcf$map[,4])), ylab="Pos. on mock", xlab="SNP index")
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+plot(as.vector(as.matrix(vcf$map[,4])), ylab="Pos. on mock", xlab="SNP index", main="Filtered")
+plot(as.vector(as.matrix(vcfUnfiltered$map[,4])), ylab="Pos. on mock", xlab="SNP index", main="Unfiltered")
 ```
 
-### SNP loci on cluster
+#### SNP loci on cluster
 Distribution of the variant across the cluster
 
-```{r}
-hist(as.vector(as.matrix(vcf$map[,4])), main="SNP loci distribution", xlab="Position", col=report.colours[1])
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+hist(as.vector(as.matrix(vcf$map[,4])), main="SNP loci distribution (filtered)", xlab="Position", col=report.colours[1])
+hist(as.vector(as.matrix(vcfUnfiltered$map[,4])), main="SNP loci distribution (unfiltered)", xlab="Position", col=report.colours[1])
 ```
 
-### Missing variants per samples
+#### Missing variants per samples (absolute)
 
 Missing variant calls per sample
 
-```{r}
+```{r, fig.width=10}
+par(mfrow=c(1,2))
 missingnessPerSample <- apply(vcf$genotypesInfo==".,.",2,sum)
-barplot(missingnessPerSample, las=2, main="Missing variants per sample", col=report.colours[1])
+barplot(missingnessPerSample, las=2, main="Missing variants per sample (filtered)", col=report.colours[1])
+missingnessPerSample <- as.matrix(missingnessPerSample)
+
+missingnessPerSample <- apply(vcfUnfiltered$genotypesInfo==".,.",2,sum)
+barplot(missingnessPerSample, las=2, main="Missing variants per sample (unfiltered)", col=report.colours[1])
 missingnessPerSample <- as.matrix(missingnessPerSample)
 ```
 
-### Missigness vs sequencing depths
+#### Missing variants per samples (percent)
+
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+barplot(apply(vcf$genotypesInfo==".,.",2,sum)/nrow(vcf$map)*100, las=2, main="Missing variants per sample (in %), filtered", col=report.colours[1])
+barplot(apply(vcfUnfiltered$genotypesInfo==".,.",2,sum)/nrow(vcfUnfiltered$map)*100, las=2, main="Missing variants per sample (in %), unfiltered", col=report.colours[1])
+```
+## Preliminary mock
+
+### Basic stats
+
+Basic stats and combinations for the called variants for filtered calls.
 
 ```{r}
-missSample <- data.frame(Sample=gsub("\\.","_",rownames(missingnessPerSample)),
-                         Missing=missingnessPerSample)
-missVSseq <- merge(totalSequences, missSample, by="Sample")
-plot(missVSseq[,3], missVSseq[,2])
+out <- getBasicStats(vcfGSC)
+kable_styling(out[[1]], "striped", position = "left")  
+
+kable_styling(out[[2]], "striped", position = "left")  
 ```
 
-### Missingness per bp position
-t.b.a.
-
-### Missing variants per samples
+Basic stats and combinations for the called variants for unfiltered calls.
 
 ```{r}
-barplot(apply(vcf$genotypesInfo==".,.",2,sum)/noVariants*100, las=2, main="Missing variants per sample (in %)", col=report.colours[1])
+out <- getBasicStats(vcfGSCUnfiltered)
+kable_styling(out[[1]], "striped", position = "left")  
+
+kable_styling(out[[2]], "striped", position = "left") 
 ```
 
-### Distribution of filtering criterias
-```{r}
-tmp <- cumsum(sort(apply(DP,2,sum, na.rm=TRUE)))
-plot(tmp, type="l")
-abline(a=0, b=3*70, col="red")
-abline(a=0, b=200*70, col="red")
-```
+### Info Stats
 
-```{r}
-tmp <- table(apply(DP>200,2,sum, na.rm=TRUE))
-tmp <- rbind(tmp,table(apply(DP>2,2,sum)))
-tmp <- rbind(tmp,table(apply(DP>3,2,sum)))
-tmp <- rbind(tmp,table(apply(DP>4,2,sum)))
-tmp <- rbind(tmp,table(apply(DP>5,2,sum)))
-barplot(tmp,border=0)
-```
-
-
-## Reference genome
-We give some basic stats on the vcf file
+Genotype stats for called variants for filtered calls.
 
 ```{r}
-if(refAvail){
-  out <- c()
-  out[1] <- dim(vcfRef$map)[1]
-  noVariants.ref <- dim(vcfRef$map)[1]
-  names(out)[1] <- "Total number of variants"
-  out[2] <- sum(sapply(apply(vcfRef$genotypes,2,table),length)==1)
-  names(out)[2] <- "Monomorphic sites"
-  out_html <- knitr::kable(out, col.names = NULL, "html")
-  kable_styling(out_html, "striped", position = "left")
-}
+kable_styling(getInfoSummary(vcfGSC), "striped", position = "left")  
 ```
 
+Genotype stats for called variants for unfiltered calls.
+
+```{r}
+kable_styling(getInfoSummary(vcfGSCUnfiltered), "striped", position = "left")  
+```
+
+
+
+### Visuals
+
+#### SNP position vs snp index
 Plot the snp position
-```{r}
-if(refAvail){
-  plot(as.vector(as.matrix(vcfRef$map[,4])), ylab="Pos. on mock", xlab="SNP index")
-}
+
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+plot(as.vector(as.matrix(vcfGSC$map[,4])), ylab="Pos. on mock", xlab="SNP index", main="Filtered")
+plot(as.vector(as.matrix(vcfGSCUnfiltered$map[,4])), ylab="Pos. on mock", xlab="SNP index", main="Unfiltered")
 ```
+
+#### SNP loci on cluster
+Distribution of the variant across the cluster
+
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+hist(as.vector(as.matrix(vcfGSC$map[,4])), main="SNP loci distribution (filtered)", xlab="Position", col=report.colours[1])
+hist(as.vector(as.matrix(vcfGSCUnfiltered$map[,4])), main="SNP loci distribution (unfiltered)", xlab="Position", col=report.colours[1])
+```
+
+#### Missing variants per samples (absolute)
+
 Missing variant calls per sample
 
-```{r}
-if(refAvail){
-  barplot(apply(vcfRef$genotypesInfo==".,.",2,sum), las=2, main="Missing variants per sample", col=report.colours[1])
-}
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+missingnessPerSample <- apply(vcfGSC$genotypesInfo==".,.",2,sum)
+barplot(missingnessPerSample, las=2, main="Missing variants per sample (filtered)", col=report.colours[1])
+missingnessPerSample <- as.matrix(missingnessPerSample)
+
+missingnessPerSample <- apply(vcfGSCUnfiltered$genotypesInfo==".,.",2,sum)
+barplot(missingnessPerSample, las=2, main="Missing variants per sample (unfiltered)", col=report.colours[1])
+missingnessPerSample <- as.matrix(missingnessPerSample)
 ```
+
+#### Missing variants per samples (percent)
+
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+barplot(apply(vcfGSC$genotypesInfo==".,.",2,sum)/nrow(vcfGSC$map)*100, las=2, main="Missing variants per sample (in %), filtered", col=report.colours[1])
+barplot(apply(vcfGSCUnfiltered$genotypesInfo==".,.",2,sum)/nrow(vcfGSCUnfiltered$map)*100, las=2, main="Missing variants per sample (in %), unfiltered", col=report.colours[1])
+```
+
+
+## Reference Genome
+
+### Basic stats
+
+Basic stats and combinations for the called variants for filtered calls.
+
 ```{r}
 if(refAvail){
-  barplot(apply(vcfRef$genotypesInfo==".,.",2,sum)/noVariants.ref*100, las=2, main="Missing variants per sample (in %)", col=report.colours[1])
+out <- getBasicStats(vcfRef)
+  kable_styling(out[[1]], "striped", position = "left")  
+  
+  kable_styling(out[[2]], "striped", position = "left") 
 }
 ```
 
+Basic stats and combinations for the called variants for unfiltered calls.
+
+```{r}
+if(refAvail){
+  out <- getBasicStats(vcfRefUnfiltered)
+    kable_styling(out[[1]], "striped", position = "left")  
+
+    kable_styling(out[[2]], "striped", position = "left") 
+}
+```
+
+### Info Stats
+
+Genotype stats for called variants for filtered calls.
+
+```{r}
+kable_styling(getInfoSummary(vcfRef), "striped", position = "left")  
+```
+
+Genotype stats for called variants for unfiltered calls.
+
+```{r}
+kable_styling(getInfoSummary(vcfRefUnfiltered), "striped", position = "left")  
+```
+
+### Visuals
+
+#### SNP position vs snp index
+Plot the snp position
+
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+plot(as.vector(as.matrix(vcfRef$map[,4])), ylab="Pos. on ref", xlab="SNP index", main="Filtered")
+plot(as.vector(as.matrix(vcfRefUnfiltered$map[,4])), ylab="Pos. on ref", xlab="SNP index", main="Unfiltered")
+```
+
+#### SNP loci on reference
+Distribution of the variant across the cluster
+
+We line here the chromosomes up in the order as they appear in the created fasta index
+
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+
+positions <- as.data.frame(vcfRef$map)
+for(i in 1:nrow(positions)){
+  positions[i,4] <- positions[i,4] + refInfo[which(refInfo[,1]==positions[i,1]),3]
+}
+hist(as.vector(positions[,4]), main="SNP loci distribution (filtered)", xlab="Position", col=report.colours[1])
+
+positions <- as.data.frame(vcfRefUnfiltered$map)
+
+for(i in 1:nrow(positions)){
+  positions[i,4] <- positions[i,4] + refInfo[which(refInfo[,1]==positions[i,1]),3]
+}
+hist(as.vector(positions[,4]), main="SNP loci distribution (unfiltered)", xlab="Position", col=report.colours[1])
+```
+
+#### Missing variants per samples (absolute)
+
+Missing variant calls per sample
+
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+missingnessPerSample <- apply(vcfRef$genotypesInfo==".,.",2,sum)
+barplot(missingnessPerSample, las=2, main="Missing variants per sample (filtered)", col=report.colours[1])
+missingnessPerSample <- as.matrix(missingnessPerSample)
+
+missingnessPerSample <- apply(vcfRefUnfiltered$genotypesInfo==".,.",2,sum)
+barplot(missingnessPerSample, las=2, main="Missing variants per sample (unfiltered)", col=report.colours[1])
+missingnessPerSample <- as.matrix(missingnessPerSample)
+```
+
+#### Missing variants per samples (percent)
+
+```{r, fig.width=10}
+par(mfrow=c(1,2))
+barplot(apply(vcfRef$genotypesInfo==".,.",2,sum)/nrow(vcfRef$map)*100, las=2, main="Missing variants per sample (in %), filtered", col=report.colours[1])
+barplot(apply(vcfRefUnfiltered$genotypesInfo==".,.",2,sum)/nrow(vcfRefUnfiltered$map)*100, las=2, main="Missing variants per sample (in %), unfiltered", col=report.colours[1])
+```
